fix - spacing issues in gallery page

--- a/capstone/static/css/scss/gallery.scss
+++ b/capstone/static/css/scss/gallery.scss
@@ -12,7 +12,7 @@
 .subtitle.simple-subtitle {
   &:before {
     content: "";
-    margin-left: 0;
+    margin: 0;
   }
 }
 
@@ -39,7 +39,7 @@
     @include make-col(3);
      .main-img {
        max-width: 80%;
-       margin-top: 40%;
+       margin-top: 25%;
     }
   }
    @include media-breakpoint-down(md) {
